--- a/main.css
+++ b/main.css
@@ -99,6 +99,12 @@ hr {
     background-color: #000000;
 }
 
+.elements {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 form input,
 form textarea,
 form button {
@@ -107,7 +113,6 @@ form button {
     margin-bottom: 8px;
     padding: 8px;
 }
-
 
 form textarea {
     resize:none;
@@ -130,6 +135,8 @@ input:focus, textarea:focus {
 }
 
 footer {
+    display: flex;
+    justify-content: center;
     background-color: rgb(51, 0, 87);
     color:rgb(255, 255, 255);
     padding: 6px 0;
